# reversion-function

./: CMakeLists.txt  CMakeLists.txt.in  README.md
prototype/: CMakeLists.txt  reversion_function_prototype.cpp
src/: CMakeLists.txt  pg_list_utils.h  reversion_function.cpp  reversion_function.h  reversion_function_impl.h  reversion_function_prototype.cpp
src/adapters/: pg_list_adapter.h
unittest/: CMakeLists.txt  pg_list_adapter_test.cpp  pg_list_utils_test.cpp  reversion_function_impl_test.cpp  reversion_function_test.cpp
