cmake_minimum_required (VERSION 3.8)

set(SOURCE "reversion_function_prototype.cpp")

add_executable(reversion_function_prototype ${SOURCE})

#target_link_libraries(reversion_function_prototype pg_list)
# target_include_directories(reversion_function PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/adapters)

